--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
+  <script src="js/main.js" defer></script>
 </head>
 
 <body>
   <main>
+    <script src="js/main.js"></script>
     <script src="js/functions.js"></script>
     <script>
         console.log(checkLen("Hello, World!", 5)); // false
