--- a/index.html
+++ b/index.html
@@ -453,5 +453,6 @@
     </template>
     <script src="js/functions.js"></script>
     <script src="js/main.js" type="module"></script>
+    <script src="./js/comments.js" type="module" ></script>
   </body>
 </html>
